# vastai_fine_tuning

jigsaw/: .env  .env.example  README.md  main.py  run.sh  train.py  train_bge.py  train_deberta.py  train_stack_all.py  train_stack_all_v2.py  train_stack_bge.py  train_stack_deberta.py
jigsaw/awq_train/: pyproject.toml
jigsaw/base_train/: pyproject.toml
