[project]
name = "awq-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "autoawq>=0.2.9",
    "bitsandbytes>=0.48.1",
    "optimum>=2.0.0",
    "peft>=0.17.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "transformers",
    "trl>=0.23.1",
    "wandb>=0.22.2",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
