[project]
name = "base-train"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.2.0",
    "faiss-cpu>=1.12.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
]
